force-app/main/default/objects/RC_Event_Question_Test_Set__c/RC_Event_Question_Test_Set__c.object-meta.xml
<CustomObject>
    <description>The 30 questions that gets created when an event is created.</description>
    <label>RC_Event_Question_Test_Set</label>
    <nameField>
        <label>RC_Event_Question_Test_Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RC_Event_Question_Test_Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>