force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/currentQuestion__c.field-meta.xml
<CustomField>
    <fullName>currentQuestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>currentQuestion</label>
    <type>Checkbox</type>
</CustomField>