force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/IsAttempted__c.field-meta.xml
<CustomField>
    <fullName>IsAttempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAttempted</label>
    <type>Checkbox</type>
</CustomField>