force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/option_3__c.field-meta.xml
<CustomField>
    <fullName>option_3__c</fullName>
    <label>option 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>