force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/question_Category__c.field-meta.xml
<CustomField>
    <fullName>question_Category__c</fullName>
    <label>question Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>