force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/question_Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>question_Correct_Answer__c</fullName>
    <label>question Correct Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>