force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/question_Description__c.field-meta.xml
<CustomField>
    <fullName>question_Description__c</fullName>
    <label>question Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>