force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/question_difficulty__c.field-meta.xml
<CustomField>
    <fullName>question_difficulty__c</fullName>
    <label>question difficulty</label>
    <length>20</length>
    <type>Text</type>
</CustomField>