force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/student_attempt__c.field-meta.xml
<CustomField>
    <fullName>student_attempt__c</fullName>
    <label>Student Attempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>