force-app/main/default/objects/RC_Event_Question_Test_Set__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>question_Category__c</columns>
    <columns>question_difficulty__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>event_id__c</field>
        <operation>equals</operation>
        <value>dynamic question test 1</value>
    </filters>
    <label>All</label>
</ListView>